# mcpoyle

./: CLAUDE.md  COMMANDS.md  README.md  pyproject.toml  spec.md
.fctry/: config.json  scenarios.md  state.json
src/mcpoyle/: cli.py  clients.py  config.py  registry.py  sync.py  tui.py
tests/: test_plugins.py  test_registry.py  test_sync.py  test_tui.py
